--- a/angular.json
+++ b/angular.json
@@ -158,6 +158,9 @@
               "browserTarget": "ThrpyApp:build:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
