--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@angular/compiler-cli": "^16.1.0",
     "@ionic/angular-toolkit": "latest",
     "@types/jasmine": "~4.3.0",
+    "angular-cli-ghpages": "^2.0.0",
     "gh-pages": "^6.1.1",
     "google-fonts-webpack-plugin": "^0.4.4",
     "jasmine-core": "~4.6.0",
