--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
@@ -21,17 +22,27 @@
     "@angular/router": "^16.1.0",
     "@ionic/angular": "^7.2.1",
     "firebase": "^10.7.1",
+    "prettier": "^3.3.3",
     "rxjs": "~7.8.0",
+    "swiper": "^11.1.9",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.1.5",
+    "@angular-eslint/builder": "16.3.1",
+    "@angular-eslint/eslint-plugin": "16.3.1",
+    "@angular-eslint/eslint-plugin-template": "16.3.1",
+    "@angular-eslint/schematics": "16.3.1",
+    "@angular-eslint/template-parser": "16.3.1",
     "@angular/cli": "~16.1.5",
     "@angular/compiler-cli": "^16.1.0",
     "@ionic/angular-toolkit": "latest",
     "@types/jasmine": "~4.3.0",
+    "@typescript-eslint/eslint-plugin": "5.62.0",
+    "@typescript-eslint/parser": "5.62.0",
     "angular-cli-ghpages": "^2.0.0",
+    "eslint": "^8.51.0",
     "gh-pages": "^6.1.1",
     "google-fonts-webpack-plugin": "^0.4.4",
     "jasmine-core": "~4.6.0",
