--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
     "angular-cli-ghpages": "^2.0.0",
+    "autoprefixer": "^10.4.7",
     "eslint": "^8.51.0",
     "gh-pages": "^6.1.1",
     "google-fonts-webpack-plugin": "^0.4.4",
@@ -52,6 +53,8 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "node-sass": "^9.0.0",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.4.12",
     "typescript": "~5.1.3"
   }
 }
