--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.2.8",
+    "@angular-eslint/schematics": "^19.0.1",
     "@angular/cli": "~18.2.8",
     "@angular/compiler-cli": "^18.2.7",
     "@ionic/angular-toolkit": "latest",
